upgrade all to JDK 21, cleanup remnants from when modules were their own repos. Add createDerby factory for passing a File